CHANGES
-------
Version 1.2 - In Progress

04/04/2020 First crack at a Curio repl.  Idea borrowed from the asyncio
           REPL.  If you run `python -m curio` it will start a REPL
	   in which Curio is already running in the background. You
	   can directly await operations at the top level. For example:

              bash $ python -m curio
              Use "await" directly instead of "curio.run()".
              Type "help", "copyright", "credits" or "license" for more information.
              >>> import curio
              >>> await curio.sleep(4)
	      >>>

           Pressing Control-C causes any `await` operation to be cancelled
	   with a `curio.TaskCancelled` exception.   For normal operations
	   not involving `await, Control-C raises a `KeyboardInterrupt` as
           normal.  Note: This feature requires Python 3.8 or newer. 

03/24/2020 Added a pytest plugin for Curio. Contributed by Keith Dart.
           See curio/pytest_plugin.py.

03/02/2020 Slight refinement to TaskGroup result reporting. If no tasks
           are spawned in a TaskGroup g, then g.exception will return None
           to indicate no errors.  g.result will raise an exception
           indicating that no successful result was obtained. Addresses
           issue #314.

Version 1.1 - March 1, 2020
---------------------------
02/24/2020 Fixed a very subtle edge case involving epoll() and duplicated
           file descriptors on Linux. The fix required a new trap
           _io_release() to explitly unregister a file descriptor
           before closing. This must be embedded in any close()
           implementation prior to actually calling close() on a real
           file object.  No changes should be necessary in existing
           user-level Curio code.  Bug #313 reported by Ondřej Súkup.

Version 1.0 - February 20, 2020
-------------------------------

**** SPECIAL NOTE ****: For the past few years, Curio has been been an